Fix the spacing under the table filter and length

--- a/assets/account--order-history.css
+++ b/assets/account--order-history.css
@@ -6,10 +6,9 @@
 #order-history-return-btn {
   display: none;
 }
-
-#shopifyOrderTbl_length, 
-#newstoreOrderTbl_length {
-  padding-bottom: 20px !important;    
+.dataTables_length,
+.dataTables_filter {
+  margin-bottom: 0.5em;
 }
 #shopifyOrderTbl, 
 #newstoreOrderTbl {
